k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jokes-api
  labels:
    app: jokes-api
    environment: production
