k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: jokes-api
  labels:
    app: jokes-api
    component: backend
spec:
  type: ClusterIP
  selector:
    app: jokes-api
    component: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  sessionAffinity: None
