k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: jokes-api
  labels:
    app: jokes-api
    component: database
spec:
  type: ClusterIP
  selector:
    app: jokes-api
    component: database
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
